[gd_scene load_steps=23 format=2]

[ext_resource path="res://tileset/tilemap_feeling_dungeon.tres" type="TileSet" id=1]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=2]
[ext_resource path="res://tileset/feeling_dungeon.png" type="Texture" id=3]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=4]
[ext_resource path="res://maps/chapter5/obj_door.gd" type="Script" id=5]
[ext_resource path="res://sprites/spr_wrath_sword/spr_wrath_sword.png" type="Texture" id=6]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=7]
[ext_resource path="res://maps/chapter5/wrath.gd" type="Script" id=8]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=9]
[ext_resource path="res://maps/chapter5/chapter5-wrath.gd" type="Script" id=10]
[ext_resource path="res://maps/chapter5/aberration_anim.tscn" type="PackedScene" id=11]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=12]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=13]
[ext_resource path="res://sprites/spr_mc/spr_darkmc_shadow.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.34885
height = 22.3897

[sub_resource type="Animation" id=5]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.189465, 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "s1_atk_2"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="chapter5-wrath" type="Node2D"]
script = ExtResource( 10 )

[node name="dialogue_system" parent="." instance=ExtResource( 12 )]
boss = "wrath"

[node name="0" parent="dialogue_system" instance=ExtResource( 13 )]
dialogue_lines = [ [ "Anak itu", "Sudahkah dia mengatasi masalahnya?" ], [ "That boy", "Did he really get over himself?" ] ]
dialogue_picture_resource = [ ExtResource( 14 ), null ]
dialogue_command = "enable_boss"

[node name="aberration_anim" parent="." instance=ExtResource( 11 )]

[node name="tilemap_wrath_dungeon" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1310733, 0, 65537, -1310732, 0, 65537, -1310731, 0, 65537, -1310730, 0, 65537, -1310729, 0, 0, -1310728, 1, 131073, -1310727, 1, 131073, -1310726, 1, 131073, -1310725, 1, 131073, -1310724, 1, 131073, -1310723, 1, 131073, -1310722, 1, 131074, -1310721, 4, 0, -1376256, 4, 0, -1376255, 1, 131072, -1376254, 1, 131073, -1376253, 1, 131073, -1376252, 1, 131073, -1376251, 1, 131073, -1376250, 1, 131073, -1376249, 1, 131073, -1376248, 0, 2, -1376247, 0, 65537, -1376246, 0, 65537, -1376245, 0, 65537, -1376244, 0, 65537, -1245197, 0, 65537, -1245196, 0, 65537, -1245195, 0, 65537, -1245194, 0, 65537, -1245193, 1, 65538, -1245192, 3, 0, -1245191, 3, 0, -1245190, 3, 0, -1245189, 3, 0, -1245188, 3, 0, -1245187, 3, 0, -1245186, 3, 0, -1245185, 4, 0, -1310720, 4, 0, -1310719, 3, 0, -1310718, 3, 0, -1310717, 3, 0, -1310716, 3, 0, -1310715, 3, 0, -1310714, 3, 0, -1310713, 3, 0, -1310712, 1, 65536, -1310711, 0, 65537, -1310710, 0, 65537, -1310709, 0, 65537, -1310708, 0, 65537, -1179661, 0, 65537, -1179660, 0, 65537, -1179659, 0, 65537, -1179658, 0, 65537, -1179657, 1, 65538, -1179649, 4, 0, -1245184, 4, 0, -1245176, 1, 65536, -1245175, 0, 65537, -1245174, 0, 65537, -1245173, 0, 65537, -1245172, 0, 65537, -1114125, 0, 65537, -1114124, 0, 65537, -1114123, 0, 65537, -1114122, 0, 65537, -1114121, 1, 65538, -1114120, 4, 0, -1114119, 4, 0, -1114118, 4, 0, -1114117, 4, 0, -1114116, 4, 0, -1114115, 4, 0, -1114114, 4, 0, -1114113, 4, 0, -1179648, 4, 0, -1179647, 4, 0, -1179646, 4, 0, -1179645, 4, 0, -1179644, 4, 0, -1179643, 4, 0, -1179642, 4, 0, -1179641, 4, 0, -1179640, 1, 65536, -1179639, 0, 65537, -1179638, 0, 65537, -1179637, 0, 65537, -1179636, 0, 65537, -1048589, 0, 65537, -1048588, 0, 65537, -1048587, 0, 65537, -1048586, 0, 65537, -1048585, 1, 65538, -1048584, 4, 0, -1048583, 4, 0, -1048582, 4, 0, -1048581, 4, 0, -1048580, 4, 0, -1048579, 4, 0, -1048578, 4, 0, -1048577, 4, 0, -1114112, 4, 0, -1114111, 4, 0, -1114110, 4, 0, -1114109, 4, 0, -1114108, 4, 0, -1114107, 4, 0, -1114106, 4, 0, -1114105, 4, 0, -1114104, 1, 65536, -1114103, 0, 65537, -1114102, 0, 65537, -1114101, 0, 65537, -1114100, 0, 65537, -983053, 0, 65537, -983052, 0, 65537, -983051, 0, 65537, -983050, 0, 65537, -983049, 1, 65538, -983048, 4, 0, -983047, 4, 0, -983046, 4, 0, -983045, 4, 0, -983044, 4, 0, -983043, 4, 0, -983042, 4, 0, -983041, 4, 0, -1048576, 4, 0, -1048575, 4, 0, -1048574, 4, 0, -1048573, 4, 0, -1048572, 4, 0, -1048571, 4, 0, -1048570, 4, 0, -1048569, 4, 0, -1048568, 1, 65536, -1048567, 0, 65537, -1048566, 0, 65537, -1048565, 0, 65537, -1048564, 0, 65537, -917517, 0, 65537, -917516, 0, 65537, -917515, 0, 65537, -917514, 0, 65537, -917513, 1, 65538, -917512, 4, 0, -917511, 4, 0, -917510, 4, 0, -917509, 4, 0, -917508, 4, 0, -917507, 4, 0, -917506, 4, 0, -917505, 4, 0, -983040, 4, 0, -983039, 4, 0, -983038, 4, 0, -983037, 4, 0, -983036, 4, 0, -983035, 4, 0, -983034, 4, 0, -983033, 4, 0, -983032, 1, 65536, -983031, 0, 65537, -983030, 0, 65537, -983029, 0, 65537, -983028, 0, 65537, -851981, 0, 65537, -851980, 0, 65537, -851979, 0, 65537, -851978, 0, 65537, -851977, 1, 65538, -851976, 4, 0, -851975, 4, 0, -851974, 4, 0, -851973, 4, 0, -851972, 4, 0, -851971, 4, 0, -851970, 4, 0, -851969, 4, 0, -917504, 4, 0, -917503, 4, 0, -917502, 4, 0, -917501, 4, 0, -917500, 4, 0, -917499, 4, 0, -917498, 4, 0, -917497, 4, 0, -917496, 1, 65536, -917495, 0, 65537, -917494, 0, 65537, -917493, 0, 65537, -917492, 0, 65537, -786445, 0, 65537, -786444, 0, 65537, -786443, 0, 65537, -786442, 0, 65537, -786441, 1, 65538, -786440, 4, 0, -786439, 4, 0, -786438, 4, 0, -786437, 4, 0, -786436, 4, 0, -786435, 4, 0, -786434, 4, 0, -786433, 4, 0, -851968, 4, 0, -851967, 4, 0, -851966, 4, 0, -851965, 4, 0, -851964, 4, 0, -851963, 4, 0, -851962, 4, 0, -851961, 4, 0, -851960, 1, 65536, -851959, 0, 65537, -851958, 0, 65537, -851957, 0, 65537, -851956, 0, 65537, -720909, 0, 65537, -720908, 0, 65537, -720907, 0, 65537, -720906, 0, 65537, -720905, 1, 65538, -720904, 4, 0, -720903, 4, 0, -720902, 4, 0, -720901, 4, 0, -720900, 4, 0, -720899, 4, 0, -720898, 4, 0, -720897, 4, 0, -786432, 4, 0, -786431, 4, 0, -786430, 4, 0, -786429, 4, 0, -786428, 4, 0, -786427, 4, 0, -786426, 4, 0, -786425, 4, 0, -786424, 1, 65536, -786423, 0, 65537, -786422, 0, 65537, -786421, 0, 65537, -786420, 0, 65537, -655373, 0, 65537, -655372, 0, 65537, -655371, 0, 65537, -655370, 0, 65537, -655369, 1, 65538, -655368, 4, 0, -655367, 4, 0, -655366, 4, 0, -655365, 4, 0, -655364, 4, 0, -655363, 4, 0, -655362, 4, 0, -655361, 4, 0, -720896, 4, 0, -720895, 4, 0, -720894, 4, 0, -720893, 4, 0, -720892, 4, 0, -720891, 4, 0, -720890, 4, 0, -720889, 4, 0, -720888, 1, 65536, -720887, 0, 65537, -720886, 0, 65537, -720885, 0, 65537, -720884, 0, 65537, -589837, 0, 65537, -589836, 0, 65537, -589835, 0, 65537, -589834, 0, 65537, -589833, 1, 65538, -589832, 4, 0, -589831, 4, 0, -589830, 4, 0, -589829, 4, 0, -589828, 4, 0, -589827, 4, 0, -589826, 4, 0, -589825, 4, 0, -655360, 4, 0, -655359, 4, 0, -655358, 4, 0, -655357, 4, 0, -655356, 4, 0, -655355, 4, 0, -655354, 4, 0, -655353, 4, 0, -655352, 1, 65536, -655351, 0, 65537, -655350, 0, 65537, -655349, 0, 65537, -655348, 0, 65537, -524301, 0, 65537, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 1, 65538, -524296, 4, 0, -524295, 4, 0, -524294, 4, 0, -524293, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -589822, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -589818, 4, 0, -589817, 4, 0, -589816, 1, 65536, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -458765, 0, 65537, -458764, 0, 65537, -458763, 0, 65537, -458762, 0, 65537, -458761, 1, 65538, -458760, 4, 0, -458759, 4, 0, -458758, 4, 0, -458757, 4, 0, -458756, 4, 0, -458755, 4, 0, -458754, 4, 0, -458753, 4, 0, -524288, 4, 0, -524287, 4, 0, -524286, 4, 0, -524285, 4, 0, -524284, 4, 0, -524283, 4, 0, -524282, 4, 0, -524281, 4, 0, -524280, 1, 65536, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -393229, 0, 65537, -393228, 0, 65537, -393227, 0, 65537, -393226, 0, 65537, -393225, 1, 65538, -393224, 4, 0, -393223, 4, 0, -393222, 4, 0, -393221, 4, 0, -393220, 4, 0, -393219, 4, 0, -393218, 4, 0, -393217, 4, 0, -458752, 4, 0, -458751, 4, 0, -458750, 4, 0, -458749, 4, 0, -458748, 4, 0, -458747, 4, 0, -458746, 4, 0, -458745, 4, 0, -458744, 1, 65536, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -327693, 0, 65537, -327692, 0, 65537, -327691, 0, 65537, -327690, 0, 65537, -327689, 1, 65538, -327688, 4, 0, -327687, 4, 0, -327686, 4, 0, -327685, 4, 0, -327684, 4, 0, -327683, 4, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -393210, 4, 0, -393209, 4, 0, -393208, 1, 65536, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -262157, 0, 65537, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 1, 65538, -262152, 4, 0, -262151, 4, 0, -262150, 4, 0, -262149, 4, 0, -262148, 4, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -327678, 4, 0, -327677, 4, 0, -327676, 4, 0, -327675, 4, 0, -327674, 4, 0, -327673, 4, 0, -327672, 1, 65536, -327671, 0, 65537, -327670, 0, 65537, -327669, 0, 65537, -327668, 0, 65537, -196621, 0, 65537, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 1, 65538, -196616, 4, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, 4, 0, -262140, 4, 0, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 1, 65536, -262135, 0, 65537, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -131085, 0, 65537, -131084, 0, 65537, -131083, 0, 65537, -131082, 0, 65537, -131081, 1, 65538, -131080, 4, 0, -131079, 4, 0, -131078, 4, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 1, 65536, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -65549, 0, 65537, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 1, 65538, -65544, 4, 0, -65543, 4, 0, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 1, 65536, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -13, 0, 65537, -12, 0, 65537, -11, 0, 65537, -10, 0, 65537, -9, 1, 65538, -8, 4, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 1, 65536, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, 65523, 0, 65537, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 1, 65538, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 1, 65536, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 131059, 0, 65537, 131060, 0, 65537, 131061, 0, 65537, 131062, 0, 65537, 131063, 1, 65538, 131064, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 1, 65536, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 196595, 0, 65537, 196596, 0, 65537, 196597, 0, 65537, 196598, 0, 65537, 196599, 1, 65538, 196600, 4, 0, 196601, 4, 0, 196602, 4, 0, 196603, 4, 0, 196604, 4, 0, 196605, 4, 0, 196606, 4, 0, 196607, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 1, 65536, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 262131, 0, 65537, 262132, 0, 65537, 262133, 0, 65537, 262134, 0, 65537, 262135, 0, 131072, 262136, 1, 1, 262137, 1, 1, 262138, 1, 1, 262139, 1, 1, 262140, 1, 1, 262141, 1, 1, 262142, 1, 1, 262143, 1, 1, 196608, 1, 1, 196609, 1, 1, 196610, 1, 1, 196611, 1, 1, 196612, 1, 1, 196613, 1, 1, 196614, 1, 1, 196615, 1, 1, 196616, 0, 131074, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 327667, 0, 65537, 327668, 0, 65537, 327669, 0, 65537, 327670, 0, 65537, 327671, 0, 65537, 327672, 0, 65537, 327673, 0, 65537, 327674, 0, 65537, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 393203, 0, 65537, 393204, 0, 65537, 393205, 0, 65537, 393206, 0, 65537, 393207, 0, 65537, 393208, 0, 65537, 393209, 0, 65537, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 458739, 0, 65537, 458740, 0, 65537, 458741, 0, 65537, 458742, 0, 65537, 458743, 0, 65537, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 524275, 0, 65537, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537 )
script = ExtResource( 9 )

[node name="obj_door" type="StaticBody2D" parent="."]
position = Vector2( 0, -320 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="spr_dungeon_door" type="Sprite" parent="obj_door"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 64, 64, 32, 32 )

[node name="col_door" type="CollisionShape2D" parent="obj_door"]
shape = SubResource( 1 )

[node name="area_door" type="Area2D" parent="obj_door"]
collision_layer = 0

[node name="col_area_door" type="CollisionShape2D" parent="obj_door/area_door"]
shape = SubResource( 2 )

[node name="entity_mc" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )

[node name="area_change_map" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -344 )
destination = "res://maps/chapter5/chapter5-lone.tscn"

[node name="col_area_change" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 3 )

[node name="node_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -256 )

[node name="1" type="Position2D" parent="node_spawn"]
position = Vector2( 0, -256 )

[node name="2" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -256 )

[node name="3" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -128 )

[node name="4" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -128 )

[node name="5" type="Position2D" parent="node_spawn"]
position = Vector2( 96, 0 )

[node name="6" type="Position2D" parent="node_spawn"]
position = Vector2( -96, 0 )

[node name="wrath" type="KinematicBody2D" parent="."]
position = Vector2( 0, -256 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="node_boss_attacks" parent="wrath" instance=ExtResource( 7 )]

[node name="spr_wrath_sword" type="Sprite" parent="wrath"]
texture = ExtResource( 6 )

[node name="col_wrath_sword" type="CollisionShape2D" parent="wrath"]
shape = SubResource( 4 )

[node name="timer" type="Timer" parent="wrath"]
wait_time = 3.0
one_shot = true

[node name="animation_wrath_sword" type="AnimationPlayer" parent="wrath"]
anims/floating_sword = SubResource( 5 )
anims/s1_atk_1 = SubResource( 6 )
anims/s1_atk_2 = SubResource( 7 )

[node name="animation_overlay_wrath_sword" type="AnimationPlayer" parent="wrath"]
anims/damaged = SubResource( 8 )
[connection signal="body_entered" from="obj_door/area_door" to="obj_door" method="_on_area_door_body_entered"]
